2012-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Escape
	blocks.

2012-06-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (grub_ofdisk_iterate): Fix double
	increment.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/dns.c (grub_cmd_nslookup): Use configured DNS servers if
	none is explicitly specified.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/dns.c (grub_net_add_dns_server): Don't erase old servers
	while reallocating.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Respect netmask from bootp/dhcp.

	* grub-core/net/bootp.c (parse_dhcp_vendor): Parse mask.
	(grub_net_configure_by_dhcp_ack): Use mask and grub_net_add_ipv4_local.
	* grub-core/net/net.c (grub_net_add_addr): Split creating local route
	into ...
	(grub_net_add_ipv4_local): ... this.
	(grub_cmd_addaddr): Use grub_net_add_ipv4_local.
	* include/grub/net.h (GRUB_NET_BOOTP_NETMASK): New enum value.
	(grub_net_add_ipv4_local): New proto.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Setup video before
	determining EFI memory map size.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (grub_ofdisk_iterate): Escape commas.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/main.c (grub_set_prefix_and_root): Skip escaped commas
	when looking for partition separator.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/openfw.c (grub_ieee1275_encode_devname):
	Escape commas.

2012-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Restructure FAT driver to avoid hook in label reading as it hits a
	GCC bug.

	* include/grub/err.h (grub_err_t): New enum value GRUB_ERR_EOF.
	* grub-core/fs/fat.c (grub_fat_iterate_context): New struct.
	(grub_fat_iterate_dir): Split into ...